# steamworks.js

./: .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GitVersion.yml  README.md  build.js  client.d.ts  index.d.ts  index.js  package.json
.github/: release-drafter.yml
.github/workflows/: publish.yml  release-drafter.yml  typescript-smoke-test.yml
openspec/: project.md
openspec/changes/archive/2025-12-27-github-action-release-drafter-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-27-github-release-version-support/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-list-children-hierarchical-data-support/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-npm-ducky7go-org-publish-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-27-steamwork-rs-submodule-integration/: proposal.md  tasks.md
openspec/changes/archive/2025-12-27-upgrade-steamworks-dep/: proposal.md  tasks.md
openspec/changes/archive/2025-12-29-additional-previews-return-feature/: proposal.md  tasks.md
openspec/changes/archive/2025-12-29-steam-disconnect-feature/: proposal.md  (+1 more)
openspec/specs/ci-cd/: spec.md
openspec/specs/client-lifecycle/: spec.md
openspec/specs/npm-publish/: spec.md
openspec/specs/steamworks-dependency/: spec.md
openspec/specs/version-management/: spec.md
openspec/specs/workshop-queries/: spec.md
src/: lib.rs
src/api/: callback.rs  workshop.rs  workshop_item.rs
test/: README.md  additional-previews-smoke-test.js  shutdown.js  workshop.js
test/typescript/: index.ts  package.json
(+13 files in other folders)
